@@ -48,7 +48,7 @@ public class TestPluginSourceSets {
         Path classes = Files.createDirectories(dir.resolve("build/classes/java/main"));
 
         SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(src), classes,
-                StandardCharsets.UTF_8, false, null, 0, List.of());
+                StandardCharsets.UTF_8, false, null, 0, List.of(), List.of());
 
         assertNotNull(set);
         assertEquals(classes.toUri(), set.uri(), "the uri must be the class output, not the source directory");
@@ -71,7 +71,7 @@ public class TestPluginSourceSets {
         assertFalse(Files.exists(notCompiledYet));
 
         SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(src), notCompiledYet,
-                StandardCharsets.UTF_8, false, null, 0, List.of());
+                StandardCharsets.UTF_8, false, null, 0, List.of(), List.of());
 
         assertNotNull(set);
         assertEquals(notCompiledYet.toUri(), set.uri(),
@@ -83,7 +83,7 @@ public class TestPluginSourceSets {
     public void noClassOutputFallsBackToTheSourceDirectory(@TempDir Path dir) throws IOException {
         Path src = Files.createDirectories(dir.resolve("src"));
 
-        SourceSet set = PluginSourceSets.sourceSet("p/main", null, List.of(src), null, null, false, null, 0, List.of());
+        SourceSet set = PluginSourceSets.sourceSet("p/main", null, List.of(src), null, null, false, null, 0, List.of(), List.of());
 
         assertNotNull(set);
         assertEquals(src.toUri(), set.uri());
@@ -100,11 +100,11 @@ public class TestPluginSourceSets {
         Path absent = dir.resolve("src/main/generated");
 
         SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(real, absent), null, null, false,
-                null, 0, List.of());
+                null, 0, List.of(), List.of());
         assertNotNull(set);
         assertEquals(List.of(real), set.sourceDirectories());
 
-        assertNull(PluginSourceSets.sourceSet("p/main", ":p", List.of(absent), null, null, false, null, 0, List.of()),
+        assertNull(PluginSourceSets.sourceSet("p/main", ":p", List.of(absent), null, null, false, null, 0, List.of(), List.of()),
                 "a source set over no existing directory must not be created at all");
     }
 
@@ -118,7 +118,7 @@ public class TestPluginSourceSets {
         assertFalse(PluginSourceSets.isModularSource(List.of(plain)));
         assertTrue(PluginSourceSets.isModularSource(List.of(plain, modular)));
 
-        SourceSet set = PluginSourceSets.sourceSet("m/main", ":m", List.of(modular), null, null, false, null, 0, List.of());
+        SourceSet set = PluginSourceSets.sourceSet("m/main", ":m", List.of(modular), null, null, false, null, 0, List.of(), List.of());
         assertNotNull(set);
         assertTrue(set.isModule());
     }
@@ -132,11 +132,11 @@ public class TestPluginSourceSets {
     @Test
     public void sourceReleaseIsRecordedPerSet(@TempDir Path dir) throws IOException {
         Path src = Files.createDirectories(dir.resolve("src"));
-        SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(src), null, null, false, null, 17, List.of());
+        SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(src), null, null, false, null, 17, List.of(), List.of());
         assertNotNull(set);
         assertEquals(17, set.sourceRelease());
         // 0 means "the build said nothing", which is not the same as "release 0"
-        SourceSet silent = PluginSourceSets.sourceSet("p/test", ":p", List.of(src), null, null, true, null, 0, List.of());
+        SourceSet silent = PluginSourceSets.sourceSet("p/test", ":p", List.of(src), null, null, true, null, 0, List.of(), List.of());
         assertNotNull(silent);
         assertEquals(0, silent.sourceRelease());
     }
@@ -166,12 +166,18 @@ public class TestPluginSourceSets {
     public void moduleKindSeparatesTheThreeWaysAJarCanPresentItself(@TempDir Path dir) throws IOException {
         File explicit = jar(dir.resolve("explicit.jar"), null, "module-info.class");
         File multiRelease = jar(dir.resolve("mr.jar"), null, "META-INF/versions/9/module-info.class");
+        // ⛔ MEASURED: netty keeps its descriptor at versions/11, bouncycastle at 9. Reading only 9 answered
+        // NONE for every netty jar -- and netty is in the measured failure list this classification feeds.
+        File netty = jar(dir.resolve("netty.jar"), null, "META-INF/versions/11/module-info.class");
+        File later = jar(dir.resolve("later.jar"), null, "META-INF/versions/17/module-info.class");
         File automatic = jar(dir.resolve("automatic.jar"), "Automatic-Module-Name: com.acme.lib\n", "com/acme/A.class");
         File osgiOnly = jar(dir.resolve("osgi.jar"), "Bundle-SymbolicName: org.jsr-305\n", "javax/annotation/A.class");
         File noManifest = jar(dir.resolve("bare.jar"), null, "p/A.class");
 
         assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(explicit));
         assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(multiRelease));
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(netty), "versions/11");
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(later), "versions/17");
         assertEquals(PluginSourceSets.ModuleKind.AUTOMATIC, PluginSourceSets.moduleKind(automatic));
         // ⛔ THE jsr305 SHAPE. JPMS ignores the OSGi header, so this is NONE -- not AUTOMATIC.
         assertEquals(PluginSourceSets.ModuleKind.NONE, PluginSourceSets.moduleKind(osgiOnly));
@@ -214,9 +220,20 @@ public class TestPluginSourceSets {
         File automatic = jar(dir.resolve("automatic.jar"), "Automatic-Module-Name: com.acme.lib\n", "com/acme/A.class");
         File osgiOnly = jar(dir.resolve("osgi.jar"), "Bundle-SymbolicName: org.jsr-305\n", "javax/annotation/A.class");
 
+        File v9 = jar(dir.resolve("v9.jar"), null, "META-INF/versions/9/module-info.class");
+        File v11 = jar(dir.resolve("v11.jar"), null, "META-INF/versions/11/module-info.class");
+
         assertTrue(PluginSourceSets.isModularArtifact(explicit));
+        assertTrue(PluginSourceSets.isModularArtifact(v9));
         assertFalse(PluginSourceSets.isModularArtifact(automatic));
         assertFalse(PluginSourceSets.isModularArtifact(osgiOnly));
+        // ⛔ THE FROZEN DISAGREEMENT, PINNED SO IT CANNOT DRIFT SILENTLY. moduleKind calls versions/11 EXPLICIT
+        // -- it is -- and the ROUTING predicate still does not, because the run that would price moving netty
+        // onto javac's module path needs a modular corpus whose class-path jars still exist. Neither
+        // fernflower's nor timefold's do. Widen this the day they are rebuilt, not before.
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(v11));
+        assertFalse(PluginSourceSets.isModularArtifact(v11),
+                "frozen: see isModularArtifact's javadoc for the run that unfreezes it");
     }
 
     /**
@@ -262,6 +279,52 @@ public class TestPluginSourceSets {
         assertEquals(List.of("a", "b"),
                 PluginSourceSets.addModulesFrom(List.of("--add-modules=a", "--add-modules", "b", "--add-modules=a")),
                 "accumulated across occurrences, in order, without duplicates");
+    }
+
+    /**
+     * ⛔⛔ THE ANSWER IS THE RESOLVED LIST, WHICH IS WHY IT IS ASKED OF THE BUILD AND NOT OF A BUILD FILE.
+     * OpenSearch appends {@code -Werror} to every compile task at {@code build.gradle:280} and subtracts it again
+     * in 12 subprojects ({@code libs/common/build.gradle:56}). Whether a set fails on a warning is the outcome of
+     * both, so a grep finds the word in 13 places and cannot say it of any of them; the list read here has had
+     * the subtraction applied.
+     */
+    @Test
+    public void warningFlagsAreTheResolvedPolicy() {
+        assertEquals(List.of("-Werror"),
+                PluginSourceSets.warningFlagsFrom(List.of("-g", "-Werror", "-parameters")));
+        assertEquals(List.of("-Werror", "-Xlint:cast", "-Xlint:divzero"),
+                PluginSourceSets.warningFlagsFrom(List.of("-Werror", "-Xlint:cast", "-Xlint:divzero")),
+                "the -Xlint family travels with -Werror: which warnings exist decides what -Werror makes fatal");
+        assertEquals(List.of("-nowarn"), PluginSourceSets.warningFlagsFrom(List.of("-nowarn")));
+        assertEquals(List.of("-Werror"),
+                PluginSourceSets.warningFlagsFrom(List.of("-Werror", "-Werror")),
+                "in order, without duplicates");
+    }
+
+    /**
+     * ⚠ CONTROL, AND THE DIRECTION THAT MATTERS. A set the build exempted must come back EMPTY, not absent-ish:
+     * "no -Werror here" is the answer that keeps a unit out of a blast radius, so a false positive would widen a
+     * worklist and a false negative would silently shrink it.
+     */
+    @Test
+    public void aSetWithNoWarningPolicyRecordsNone() {
+        assertEquals(List.of(), PluginSourceSets.warningFlagsFrom(List.of("-g", "-parameters", "-encoding", "UTF-8")));
+        assertEquals(List.of(), PluginSourceSets.warningFlagsFrom(null));
+        assertEquals(List.of(), PluginSourceSets.warningFlagsFrom(List.of()));
+    }
+
+    /**
+     * ⚠ NARROW ON PURPOSE. An attribute recorded without a failure demanding it is a guess about the future.
+     * These are real javac arguments and they are deliberately NOT warning policy.
+     */
+    @Test
+    public void onlyWarningPolicyIsWarningPolicy() {
+        assertFalse(PluginSourceSets.isWarningFlag("--enable-preview"));
+        assertFalse(PluginSourceSets.isWarningFlag("--add-exports"));
+        assertFalse(PluginSourceSets.isWarningFlag("-Xmaxerrs"));
+        assertFalse(PluginSourceSets.isWarningFlag(null));
+        assertTrue(PluginSourceSets.isWarningFlag("-Werror"));
+        assertTrue(PluginSourceSets.isWarningFlag("-Xlint:all"));
     }
 
     /**
